--- a/views/room.ejs
+++ b/views/room.ejs
@@ -8,12 +8,16 @@
     <script>
         const ROOM_ID = "<%= roomId %>";
     </script>
+    <!-- Script of peerjs  -->
     <script defer src="https://unpkg.com/peerjs@1.4.7/dist/peerjs.min.js"></script>
     <!-- All of javascript code in frontend -->
     <script src="/socket.io/socket.io.js" defer></script>
     <!-- custom script -->
     <script src="script.js" defer></script>
-    <title>Document</title>
+    <title>Video Chat App</title>
+    <!-- Include Bootstrap’s CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <style>
         #video-grid {
             display: grid;
@@ -30,7 +34,10 @@
 </head>
 
 <body>
-    <div id="video-grid"></div>
+    <div class="container p-3 mb-2 bg-black text-white">
+        <h1 class="text-center">Welcome 😁 to video Chat App 💬</h1>
+        <div id="video-grid"></div>
+    </div>
 </body>
 
 </html>
